fix contrast error, add comments
make close modal button darker so the contrast is better, add some comments to JS about updating tab index

--- a/app/webpack/stylesheets/modal-dialogue.scss
+++ b/app/webpack/stylesheets/modal-dialogue.scss
@@ -24,7 +24,7 @@
 
 /* close button */
 .close {
-  color: #aaa;
+  color: #575757;
   float: right;
   font-size: 28px;
   font-weight: bold;
